--- a/index.html
+++ b/index.html
@@ -1,215 +1,256 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bitmarket</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>بیت مارکت</title>
+  <link href="https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css" rel="stylesheet" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@700&display=swap');
-
-    :root {
-      --bg-dark: radial-gradient(ellipse at top, #0a0f1a, #000000);
-      --bg-light: #f4f4f4;
-      --text-dark: white;
-      --text-light: #1f2937;
-      --accent: #00f0ff;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Oxanium', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      margin: 0;
+      padding: 0 16px;
+      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
+      font-family: 'Vazir', sans-serif;
+      color: #e0e0e0;
+    }
+    header {
       text-align: center;
-      padding: 2rem;
-      transition: background 0.5s, color 0.5s;
+      padding: 32px 0 16px;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      font-family: 'Vazir', sans-serif;
     }
-
-    body.dark {
-      background: var(--bg-dark);
-      color: var(--text-dark);
+    header h1 {
+      font-family: 'Vazir', sans-serif;
+      font-weight: 800;
+      font-size: 2.6rem;
+      background: linear-gradient(to right, #bbb, #eee);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin: 0;
     }
-
-    body.light {
-      background: var(--bg-light);
-      color: var(--text-light);
-    }
-
-    .theme-toggle {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      background: var(--accent);
-      border: none;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      font-weight: bold;
-      cursor: pointer;
-      color: black;
-      transition: 0.3s;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.2rem;
-    }
-
-    .theme-toggle:hover {
-      background: #00d2ff;
-    }
-
-    h1 {
-      font-size: 3.5rem;
-      letter-spacing: 0.15em;
-      text-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin-top: 1.2rem;
-      color: #9ca3af;
-    }
-
-    button:not(.theme-toggle) {
-      margin-top: 4rem;
-      padding: 0.8rem 2rem;
+    header div {
+      font-family: 'Vazir', sans-serif;
+      font-weight: 600;
       font-size: 1rem;
-      background: var(--accent);
+      color: #b0b0b0;
+      margin-top: 2px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 24px;
+      padding: 32px 0 24px;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.03);
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      border-radius: 16px;
+      padding: 16px;
+    }
+    .coin-name {
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    .coin-price {
+      font-family: 'DS-Digital', monospace;
+      font-size: 1.6rem;
+      margin-bottom: 6px;
+    }
+    .coin-change {
+      font-size: 0.95rem;
+      padding: 4px 10px;
+      border-radius: 10px;
+      display: inline-block;
+      margin-bottom: 10px;
+    }
+    .positive {
+      background: rgba(0, 200, 83, 0.15);
+      color: #00c853;
+    }
+    .negative {
+      background: rgba(255, 82, 82, 0.15);
+      color: #ff5252;
+    }
+    .copy-btn {
+      padding: 6px 12px;
+      border: none;
+      background: rgba(255,255,255,0.1);
+      border-radius: 8px;
+      color: #fff;
+      cursor: pointer;
+    }
+    .pagination {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      padding-bottom: 40px;
+    }
+    .pagination button {
+      padding: 6px 14px;
+      background: rgba(255,255,255,0.05);
+      color: #eee;
       border: none;
       border-radius: 8px;
-      color: black;
-      font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
     }
-
-    button:not(.theme-toggle):hover {
-      background: #00d2ff;
+    .pagination button:disabled {
+      opacity: 0.4;
+      cursor: not-allowed;
     }
-
-    .popup {
+    /* Toast styles */
+    #toast {
       position: fixed;
-      top: 50%;
+      bottom: 40px;
       left: 50%;
-      transform: translate(-50%, -50%);
-      background: #111827;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px rgba(0,255,255,0.3);
+      transform: translateX(-50%);
+      background: linear-gradient(90deg, #00c853, #64dd17);
+      color: white;
+      padding: 14px 28px;
+      border-radius: 28px;
+      font-weight: bold;
+      font-size: 1.1rem;
+      font-family: 'Vazir', sans-serif;
+      box-shadow: 0 6px 18px rgba(0, 200, 83, 0.6);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.4s ease-in-out;
+      display: flex;
+      align-items: center;
+      gap: 12px;
       z-index: 9999;
-      display: none;
-      width: 90%;
-      max-width: 700px;
-    }
-
-    .popup select,
-    .popup button {
-      margin-top: 1rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      z-index: 9998;
-    }
-
-    iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      margin-top: 1rem;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2.2rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
-
-      button {
-        margin-top: 2.5rem;
-      }
-
-      iframe {
-        height: 300px;
-      }
     }
   </style>
 </head>
-<body class="dark">
-  <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+<body>
 
-  <h1>Bitmarket</h1>
-  <p>The Future of Decentralized Trading & NFTs</p>
-  <button onclick="openPopup()">Chart</button>
+<header>
+  <h1>بیت مارکت</h1>
+  <div>نرخ ارز دیجیتال</div>
+</header>
 
-  <div class="overlay" onclick="closePopup()"></div>
-
-  <div class="popup" id="popup">
-    <h2>Select Trading Pair</h2>
-    <select id="pairSelect">
-      <option value="BINANCE:BTCUSDT">BTC/USDT</option>
-      <option value="BINANCE:ETHUSDT">ETH/USDT</option>
-      <option value="BINANCE:BNBUSDT">BNB/USDT</option>
-      <option value="BINANCE:XRPUSDT">XRP/USDT</option>
-    </select>
-    <div id="chartContainer"></div>
-    <button onclick="closePopup()">Cancel</button>
+<main>
+  <div class="grid" id="coin-grid"></div>
+  <div class="pagination">
+    <button id="prevBtn">← قبلی</button>
+    <button id="nextBtn">بعدی →</button>
   </div>
+</main>
 
-  <script>
-    function openPopup() {
-      document.querySelector('.overlay').style.display = 'block';
-      document.querySelector('.popup').style.display = 'block';
-      loadChart();
-    }
+<div id="toast">
+  <span>⚡</span>
+  <span id="toast-message"></span>
+</div>
 
-    function closePopup() {
-      document.querySelector('.overlay').style.display = 'none';
-      document.querySelector('.popup').style.display = 'none';
-      document.getElementById('chartContainer').innerHTML = '';
-    }
+<script>
+  const allCoins = [
+    { symbol: 'btcusdt', name: 'بیت‌کوین' },
+    { symbol: 'ethusdt', name: 'اتریوم' },
+    { symbol: 'trxusdt', name: 'ترون' },
+    { symbol: 'bnbusdt', name: 'بایننس کوین' },
+    { symbol: 'adausdt', name: 'کاردانو' },
+    { symbol: 'dogeusdt', name: 'دوج کوین' },
+    { symbol: 'solusdt', name: 'سولانا' },
+    { symbol: 'xrpusdt', name: 'ریپل' },
+    { symbol: 'maticusdt', name: 'پالیگان' },
+    { symbol: 'ltcusdt', name: 'لایت‌کوین' }
+  ];
 
-    function loadChart() {
-      const pair = document.getElementById('pairSelect').value;
-      const container = document.getElementById('chartContainer');
-      container.innerHTML = `
-        <iframe src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_${Date.now()}&symbol=${pair}&interval=1&hidesidetoolbar=1&symboledit=1&saveimage=1&toolbarbg=F1F3F6&studies=[]&theme=dark&style=1&timezone=Etc/UTC&withdateranges=1&hideideas=1&locale=en" allowfullscreen></iframe>
+  const itemsPerPage = 4;
+  let currentPage = 0;
+
+  function renderPage() {
+    const grid = document.getElementById('coin-grid');
+    grid.innerHTML = '';
+    const start = currentPage * itemsPerPage;
+    const end = start + itemsPerPage;
+    const coinsToShow = allCoins.slice(start, end);
+
+    coinsToShow.forEach(coin => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `
+        <div class="coin-name">${coin.name}</div>
+        <div class="coin-price" id="price-${coin.symbol}">---</div>
+        <div class="coin-change" id="change-${coin.symbol}">---</div>
+        <button class="copy-btn" onclick="copyRate('${coin.name}', '${coin.symbol}')">کپی نرخ</button>
       `;
-    }
+      grid.appendChild(card);
+      connectWebSocket(coin);
+    });
 
-    document.getElementById('pairSelect').addEventListener('change', loadChart);
+    document.getElementById('prevBtn').disabled = currentPage === 0;
+    document.getElementById('nextBtn').disabled = end >= allCoins.length;
+  }
 
-    function toggleTheme() {
-      const body = document.body;
-      const currentTheme = body.classList.contains('dark') ? 'dark' : 'light';
-      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-      body.classList.remove(currentTheme);
-      body.classList.add(newTheme);
-      localStorage.setItem('theme', newTheme);
-    }
-
-    window.onload = () => {
-      const savedTheme = localStorage.getItem('theme') || 'dark';
-      document.body.classList.remove('dark', 'light');
-      document.body.classList.add(savedTheme);
+  function connectWebSocket(coin) {
+    const ws = new WebSocket(`wss://stream.binance.com:9443/ws/${coin.symbol}@ticker`);
+    ws.onmessage = e => {
+      const data = JSON.parse(e.data);
+      const price = parseFloat(data.c).toLocaleString('fa-IR', { minimumFractionDigits: 2 });
+      const change = parseFloat(data.P).toFixed(2);
+      document.getElementById(`price-${coin.symbol}`).textContent = `$${price}`;
+      const changeEl = document.getElementById(`change-${coin.symbol}`);
+      changeEl.textContent = `${change}%`;
+      changeEl.className = `coin-change ${change >= 0 ? 'positive' : 'negative'}`;
     };
-  </script>
+  }
+
+  function showToast(message) {
+    const toast = document.getElementById('toast');
+    const toastMsg = document.getElementById('toast-message');
+    toastMsg.textContent = message;
+    toast.style.opacity = '1';
+    toast.style.pointerEvents = 'auto';
+
+    clearTimeout(toast.hideTimeout);
+    toast.hideTimeout = setTimeout(() => {
+      toast.style.opacity = '0';
+      toast.style.pointerEvents = 'none';
+    }, 3000);
+  }
+
+  function copyRate(name, symbol) {
+    const price = document.getElementById(`price-${symbol}`).textContent;
+    const change = document.getElementById(`change-${symbol}`).textContent;
+    const now = new Date().toLocaleTimeString('fa-IR');
+    const text = `
+🔥 گزارش لحظه‌ای نرخ ارز دیجیتال 🔥
+
+🏷️ نام ارز: ${name} (${symbol.toUpperCase()})
+💰 قیمت فعلی: ${price}
+📊 تغییر 24 ساعته: ${change}
+⏰ زمان ثبت: ${now} (به وقت ایران)
+
+📌 این اطلاعات به صورت لحظه‌ای و از منبع معتبر Binance دریافت شده است.
+
+🙏 ممنون که از ما استفاده می‌کنید!
+    `.trim();
+
+    navigator.clipboard.writeText(text).then(() => {
+      showToast(`نرخ ارز (${name}) با موفقیت کپی شد.`);
+    }).catch(() => {
+      alert('خطا در کپی کردن متن.');
+    });
+  }
+
+  document.getElementById('prevBtn').addEventListener('click', () => {
+    if (currentPage > 0) {
+      currentPage--;
+      renderPage();
+    }
+  });
+
+  document.getElementById('nextBtn').addEventListener('click', () => {
+    if ((currentPage + 1) * itemsPerPage < allCoins.length) {
+      currentPage++;
+      renderPage();
+    }
+  });
+
+  renderPage();
+</script>
+
 </body>
 </html>
