--- a/index.html
+++ b/index.html
@@ -144,42 +144,65 @@ input[type="text"] {
   color: #cfcfcf;
 }
 
-/* کارت بازی بعدی */
+/* 🎯 کارت بازی بعدی (اصلاح‌شده و حرفه‌ای‌تر) */
 .next-match-card {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.08);
-  border-radius: 18px;
-  padding: 20px;
-  width: 65%;
-  max-width: 360px;
-  min-height: 60px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  padding: 25px 20px 30px;
+  width: 75%;
+  max-width: 380px;
+  min-height: 100px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  backdrop-filter: blur(8px);
-  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 25px rgba(0,0,0,0.4);
+  overflow: visible; /* ✅ حالا mini-card کاملاً دیده می‌شود */
+  transition: 0.3s ease;
 }
+.next-match-card:hover {
+  transform: translate(-50%, -50%) scale(1.03);
+  box-shadow: 0 0 35px rgba(25,216,124,0.3);
+}
+
 .next-match-card .mini-card {
   position: absolute;
-  top: -15px;
+  top: -12px;
   right: 20px;
-  background: #fff;
+  background: linear-gradient(135deg, #19d87c, #12a05e);
   color: #063f33;
-  padding: 5px 15px;
+  padding: 6px 18px;
   font-size: 13px;
   font-weight: bold;
   border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(25,216,124,0.4);
+}
+
+#match-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #f2f2f2;
+  font-size: 15px;
 }
 .next-match-content {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
   font-size: 14px;
+  margin-top: 10px;
+  background: rgba(0,0,0,0.3);
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 8px rgba(255,255,255,0.05);
 }
 
 /* کارت پایین صفحه */
