--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ input[type="text"] {
   color: #cfcfcf;
 }
 
-/* 🎯 کارت بازی بعدی (اصلاح‌شده و حرفه‌ای‌تر) */
+/* 🎯 کارت بازی بعدی */
 .next-match-card {
   position: absolute;
   top: 50%;
@@ -163,14 +163,13 @@ input[type="text"] {
   text-align: center;
   backdrop-filter: blur(10px);
   box-shadow: 0 0 25px rgba(0,0,0,0.4);
-  overflow: visible; /* ✅ حالا mini-card کاملاً دیده می‌شود */
+  overflow: visible;
   transition: 0.3s ease;
 }
 .next-match-card:hover {
   transform: translate(-50%, -50%) scale(1.03);
   box-shadow: 0 0 35px rgba(25,216,124,0.3);
 }
-
 .next-match-card .mini-card {
   position: absolute;
   top: -12px;
@@ -183,7 +182,6 @@ input[type="text"] {
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(25,216,124,0.4);
 }
-
 #match-content {
   width: 100%;
   display: flex;
@@ -205,34 +203,50 @@ input[type="text"] {
   box-shadow: inset 0 0 8px rgba(255,255,255,0.05);
 }
 
-/* کارت پایین صفحه */
+/* 🎨 کارت پایین صفحه حرفه‌ای‌تر */
 .bottom-card {
   position: absolute;
   bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
   width: calc(100% - 100px);
-  background: rgba(0,0,0,0.6);
-  border-radius: 12px;
-  padding: 14px 20px;
+  background: linear-gradient(135deg, rgba(25,216,124,0.3), rgba(0,0,0,0.6));
+  border-radius: 16px;
+  padding: 16px 22px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
-  transition: transform 0.2s ease;
+  backdrop-filter: blur(6px);
+  box-shadow: 0 6px 18px rgba(0,0,0,0.5);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+.bottom-card:hover {
+  transform: translateX(-50%) translateY(-3px);
+  box-shadow: 0 10px 25px rgba(25,216,124,0.5);
+}
+.bottom-card span {
+  color: #f2f2f2;
+  font-weight: 500;
+  line-height: 1.3;
 }
 .bottom-card button {
-  background: #2196f3;
+  background: #19d87c;
   border: none;
-  color: white;
-  padding: 6px 12px;
-  border-radius: 6px;
+  color: #063f33;
+  padding: 8px 16px;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 13px;
   font-weight: bold;
-  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 0 4px 12px rgba(25,216,124,0.4);
 }
-.bottom-card button:hover { background: #1976d2; }
+.bottom-card button:hover {
+  background: #12c066;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 15px rgba(25,216,124,0.5);
+}
 </style>
 </head>
 <body>
@@ -304,7 +318,6 @@ function createDefaultLogo(){
 
 if(teamData) showMainPage();
 
-// انتخاب لوگو
 logoPreview.addEventListener("click", () => logoInput.click());
 headerLogo.addEventListener("click", () => logoInput.click());
 
@@ -325,7 +338,6 @@ logoInput.addEventListener("change", function() {
   }
 });
 
-// ساخت تیم
 createBtn.addEventListener("click", () => {
   const teamName = teamNameInput.value.trim();
   if(teamName === ""){
@@ -367,7 +379,6 @@ function showMainPage(){
   }
 }
 
-// انیمیشن کارت پایین صفحه
 bottomBtn.addEventListener("click", () => {
   bottomCard.style.transform = "translate(-50%, -10px)";
   setTimeout(() => { bottomCard.style.transform = "translateX(-50%)"; }, 200);
