--- a/index.html
+++ b/index.html
@@ -20,58 +20,92 @@ html, body {
   justify-content: center;
 }
 
-/* صفحه ساخت تیم */
+/* صفحه ساخت تیم حرفه‌ای */
 .create-team {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 25px;
+  gap: 20px;
   width: 90%;
-  max-width: 350px;
+  max-width: 360px;
+  padding: 30px 25px;
+  background: rgba(25, 216, 124, 0.1);
+  border-radius: 20px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(25, 216, 124, 0.25);
+  transition: transform 0.3s ease;
+}
+.create-team:hover {
+  transform: scale(1.02);
 }
 
 .logo-container {
-  width: 110px;
-  height: 110px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.08);
+  background: rgba(255, 255, 255, 0.05);
   display: flex;
   align-items: center;
   justify-content: center;
   color: #19d87c;
   font-size: 14px;
   cursor: pointer;
-  transition: 0.2s;
   overflow: hidden;
+  box-shadow: 0 4px 18px rgba(25, 216, 124, 0.4);
+  transition: all 0.3s ease;
 }
-.logo-container:hover { background-color: rgba(25, 216, 124, 0.15); }
-.logo-container img { width: 100%; height: 100%; object-fit: cover; }
+.logo-container:hover {
+  transform: scale(1.08);
+  background: rgba(25, 216, 124, 0.15);
+  box-shadow: 0 6px 22px rgba(25, 216, 124, 0.6);
+}
+.logo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  transition: transform 0.3s ease;
+}
 
 input[type="file"] { display: none; }
+
 input[type="text"] {
   width: 100%;
-  padding: 12px;
+  padding: 14px 16px;
   border: none;
-  border-radius: 8px;
+  border-radius: 14px;
   outline: none;
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
   color: #f2f2f2;
-  background-color: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.5);
+  transition: background 0.3s ease, box-shadow 0.3s ease;
 }
+input[type="text"]:focus {
+  background: rgba(25, 216, 124, 0.1);
+  box-shadow: 0 0 12px rgba(25, 216, 124, 0.6);
+}
+
 .btn {
   width: 100%;
-  background: #19d87c;
-  color: #063f33;
-  border: none;
-  padding: 12px;
-  border-radius: 8px;
+  padding: 14px;
   font-size: 16px;
+  font-weight: 600;
+  color: #063f33;
+  background: linear-gradient(135deg, #19d87c, #12a05e);
+  border: none;
+  border-radius: 14px;
   cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
+  box-shadow: 0 5px 18px rgba(25, 216, 124, 0.5);
+  transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.3s ease;
 }
-.btn:hover { background: #16c06e; }
+.btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 7px 22px rgba(25, 216, 124, 0.6);
+  background: linear-gradient(135deg, #16c06e, #0fa55b);
+}
 
 /* پاپ‌آپ */
 .popup {
