--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <div class="match-card">
                 <div class="match-header">
                     <span class="league">لیگ برتر ایران</span>
-                    <span class="date" data-save="date-1">۱۴۰۴/۰۹/۱۱ - -</span>
+                    <span class="date" data-save="date-1">۱۴۰۴/۰۹/۱۱ - هفته اول</span>
                 </div>
                 <div class="match-content">
                     <div class="team">
@@ -441,9 +441,9 @@
                         <span class="team-name" data-save="home-1">آب موز</span>
                     </div>
                     <div class="score-section">
-                        <span class="score-box" data-save="score-home-1">0</span>
+                        <span class="score-box" data-save="score-home-1">2</span>
                         <span class="colon">:</span>
-                        <span class="score-box" data-save="score-away-1">0</span>
+                        <span class="score-box" data-save="score-away-1">3</span>
                     </div>
                     <div class="team">
                         <div class="team-logo">
@@ -462,7 +462,7 @@
             <div class="match-card">
                 <div class="match-header">
                     <span class="league">لیگ برتر ایران</span>
-                    <span class="date" data-save="date-2">۱۴۰۴/۰۹/۱۱ - -</span>
+                    <span class="date" data-save="date-2">۱۴۰۴/۰۹/۱۱ - هفته اول</span>
                 </div>
                 <div class="match-content">
                     <div class="team">
@@ -474,7 +474,7 @@
                     <div class="score-section">
                         <span class="score-box" data-save="score-home-2">0</span>
                         <span class="colon">:</span>
-                        <span class="score-box" data-save="score-away-2">0</span>
+                        <span class="score-box" data-save="score-away-2">5</span>
                     </div>
                     <div class="team">
                         <div class="team-logo">
@@ -493,7 +493,7 @@
             <div class="match-card">
                 <div class="match-header">
                     <span class="league">لیگ برتر ایران</span>
-                    <span class="date" data-save="date-3">۱۴۰۴/۰۹/۱۱ - -</span>
+                    <span class="date" data-save="date-3">۱۴۰۴/۰۹/۱۱ - هفته اول</span>
                 </div>
                 <div class="match-content">
                     <div class="team">
@@ -503,9 +503,9 @@
                         <span class="team-name" data-save="home-3">ستاره سرخ</span>
                     </div>
                     <div class="score-section">
-                        <span class="score-box" data-save="score-home-3">0</span>
+                        <span class="score-box" data-save="score-home-3">1</span>
                         <span class="colon">:</span>
-                        <span class="score-box" data-save="score-away-3">0</span>
+                        <span class="score-box" data-save="score-away-3">1</span>
                     </div>
                     <div class="team">
                         <div class="team-logo">
@@ -524,7 +524,7 @@
             <div class="match-card">
                 <div class="match-header">
                     <span class="league">لیگ برتر ایران</span>
-                    <span class="date" data-save="date-4">۱۴۰۴/۰۹/۱۱ - -</span>
+                    <span class="date" data-save="date-4">۱۴۰۴/۰۹/۱۱ - هفته اول</span>
                 </div>
                 <div class="match-content">
                     <div class="team">
@@ -534,9 +534,9 @@
                         <span class="team-name" data-save="home-4">گاتهام یونایتد</span>
                     </div>
                     <div class="score-section">
-                        <span class="score-box" data-save="score-home-4">0</span>
+                        <span class="score-box" data-save="score-home-4">1</span>
                         <span class="colon">:</span>
-                        <span class="score-box" data-save="score-away-4">0</span>
+                        <span class="score-box" data-save="score-away-4">1</span>
                     </div>
                     <div class="team">
                         <div class="team-logo">
@@ -555,7 +555,7 @@
             <div class="match-card">
                 <div class="match-header">
                     <span class="league">لیگ برتر ایران</span>
-                    <span class="date" data-save="date-5">۱۴۰۴/۰۹/۱۱ - -</span>
+                    <span class="date" data-save="date-5">۱۴۰۴/۰۹/۱۱ - هفته اول</span>
                 </div>
                 <div class="match-content">
                     <div class="team">
@@ -585,7 +585,7 @@
         
         <!-- جدول رده‌بندی -->
         <div class="table-container">
-            <h2 class="table-title">جدول رده‌بندی لیگ برتر ایران</h2>
+            <h2 class="table-title">جدول رده‌بندی لیگ برتر ایران - هفته اول</h2>
             <table class="standings-table">
                 <thead>
                     <tr>
@@ -602,6 +602,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- رتبه 1 - ای اف سی -->
                     <tr>
                         <td><span class="position">1</span></td>
                         <td>
@@ -612,15 +613,16 @@
                                 <span class="team-name-compact">ای اف سی</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>3</td>
+                        <td>1</td>
                         <td>0</td>
                         <td>0</td>
+                        <td>5</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>+5</td>
                     </tr>
+                    <!-- رتبه 2 - کوشخول اف سی -->
                     <tr>
                         <td><span class="position">2</span></td>
                         <td>
@@ -631,74 +633,18 @@
                                 <span class="team-name-compact">کوشخول اف سی</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>3</td>
+                        <td>1</td>
                         <td>0</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>3</td>
+                        <td>2</td>
+                        <td>+1</td>
                     </tr>
+                    <!-- رتبه 3 - آذریورد -->
                     <tr>
                         <td><span class="position">3</span></td>
-                        <td>
-                            <div class="team-row">
-                                <div class="team-logo">
-                                    <img src="https://instasize.com/api/image/8d27995c45ba0faf6d44f78f5dbf8d30ead269de424c4d3b7384a511f33c0513.jpeg" alt="شاگردان قلعه نویی">
-                                </div>
-                                <span class="team-name-compact">شاگردان قلعه نویی</span>
-                            </div>
-                        </td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td><span class="position">4</span></td>
-                        <td>
-                            <div class="team-row">
-                                <div class="team-logo">
-                                    <img src="https://instasize.com/api/image/9fce86001d0554dade6a2d8aa6e3f84da67f93208216820b1a94f1d04ed96f66.jpeg" alt="خیارشور اف سی">
-                                </div>
-                                <span class="team-name-compact">خیارشور اف سی</span>
-                            </div>
-                        </td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td><span class="position">5</span></td>
-                        <td>
-                            <div class="team-row">
-                                <div class="team-logo">
-                                    <img src="https://instasize.com/api/image/ae49beb6d4cdba776b65cb4bf529384d5e1d8ce4a8cb5a0521eb76ec01edd132.jpeg" alt="فوت موپ">
-                                </div>
-                                <span class="team-name-compact">فوت موپ</span>
-                            </div>
-                        </td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td><span class="position">6</span></td>
                         <td>
                             <div class="team-row">
                                 <div class="team-logo">
@@ -707,36 +653,18 @@
                                 <span class="team-name-compact">آذریورد</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td><span class="position">7</span></td>
-                        <td>
-                            <div class="team-row">
-                                <div class="team-logo">
-                                    <img src="https://instasize.com/api/image/ef7e18d48d5afc8cb634c8859e122b7f7b679e761ee6e01f38d0bf7bcc9efd67.jpeg" alt="آب موز">
-                                </div>
-                                <span class="team-name-compact">آب موز</span>
-                            </div>
-                        </td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
                     </tr>
+                    <!-- رتبه 4 - گاتهام یونایتد -->
                     <tr>
-                        <td><span class="position">8</span></td>
+                        <td><span class="position">4</span></td>
                         <td>
                             <div class="team-row">
                                 <div class="team-logo">
@@ -745,36 +673,38 @@
                                 <span class="team-name-compact">گاتهام یونایتد</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
                     </tr>
+                    <!-- رتبه 5 - خیارشور اف سی -->
                     <tr>
-                        <td><span class="position">9</span></td>
+                        <td><span class="position">5</span></td>
                         <td>
                             <div class="team-row">
                                 <div class="team-logo">
-                                    <img src="https://instasize.com/api/image/673f11cf0a3c518a05024204d2ab6c58df3aaf921c22eed301910fc6fb4292a6.jpeg" alt="بلولاک">
+                                    <img src="https://instasize.com/api/image/9fce86001d0554dade6a2d8aa6e3f84da67f93208216820b1a94f1d04ed96f66.jpeg" alt="خیارشور اف سی">
                                 </div>
-                                <span class="team-name-compact">بلولاک</span>
+                                <span class="team-name-compact">خیارشور اف سی</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>1</td>
                         <td>0</td>
                     </tr>
+                    <!-- رتبه 6 - ستاره سرخ -->
                     <tr>
-                        <td><span class="position">10</span></td>
+                        <td><span class="position">6</span></td>
                         <td>
                             <div class="team-row">
                                 <div class="team-logo">
@@ -783,14 +713,94 @@
                                 <span class="team-name-compact">ستاره سرخ</span>
                             </div>
                         </td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
+                    </tr>
+                    <!-- رتبه 7 - شاگردان قلعه نویی -->
+                    <tr>
+                        <td><span class="position">7</span></td>
+                        <td>
+                            <div class="team-row">
+                                <div class="team-logo">
+                                    <img src="https://instasize.com/api/image/8d27995c45ba0faf6d44f78f5dbf8d30ead269de424c4d3b7384a511f33c0513.jpeg" alt="شاگردان قلعه نویی">
+                                </div>
+                                <span class="team-name-compact">شاگردان قلعه نویی</span>
+                            </div>
+                        </td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>1</td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
+                    </tr>
+                    <!-- رتبه 8 - بلولاک -->
+                    <tr>
+                        <td><span class="position">8</span></td>
+                        <td>
+                            <div class="team-row">
+                                <div class="team-logo">
+                                    <img src="https://instasize.com/api/image/673f11cf0a3c518a05024204d2ab6c58df3aaf921c22eed301910fc6fb4292a6.jpeg" alt="بلولاک">
+                                </div>
+                                <span class="team-name-compact">بلولاک</span>
+                            </div>
+                        </td>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>1</td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
+                    </tr>
+                    <!-- رتبه 9 - آب موز -->
+                    <tr>
+                        <td><span class="position">9</span></td>
+                        <td>
+                            <div class="team-row">
+                                <div class="team-logo">
+                                    <img src="https://instasize.com/api/image/ef7e18d48d5afc8cb634c8859e122b7f7b679e761ee6e01f38d0bf7bcc9efd67.jpeg" alt="آب موز">
+                                </div>
+                                <span class="team-name-compact">آب موز</span>
+                            </div>
+                        </td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>-1</td>
+                    </tr>
+                    <!-- رتبه 10 - فوت موپ -->
+                    <tr>
+                        <td><span class="position">10</span></td>
+                        <td>
+                            <div class="team-row">
+                                <div class="team-logo">
+                                    <img src="https://instasize.com/api/image/ae49beb6d4cdba776b65cb4bf529384d5e1d8ce4a8cb5a0521eb76ec01edd132.jpeg" alt="فوت موپ">
+                                </div>
+                                <span class="team-name-compact">فوت موپ</span>
+                            </div>
+                        </td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>0</td>
+                        <td>5</td>
+                        <td>-5</td>
                     </tr>
                 </tbody>
             </table>
